k8s/clusters/production/apps/nongkee-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nongkee-id
spec:
  selector:
    app: nongkee-id
  ports:
    - port: 3000
      targetPort: 3000
