k8s/clusters/production/apps/nongkee-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nongkee-id
spec:
  parentRefs:
    - name: nongkee-id
  hostnames:
    - nongkee.id
  rules:
    - backendRefs:
        - name: nongkee-id
          port: 3000
